# halley-labs

./: .gitignore  .gitmodules  README.md  fabrications.json  groundings_run_summary.json  hallucinations.json  researcher_pool_cache.json  run_cleanup.py  tool_paper.tex
algebraic-repair-calculus/: API.md  README.md  State.json  groundings.json  pyproject.toml  tool_paper.tex
algebraic-repair-calculus/alternation/: phase2_adjudication.md  readme_truth_round_00.md  scavenging_synthesis.md
algebraic-repair-calculus/benchmarks/: arc_simple.py  benchmark_results.json  real_benchmark_results.json  real_benchmarks.py  run_all.py  sota_benchmark.py
algebraic-repair-calculus/examples/: duckdb_repair_demo.py  pandas_repair_demo.py
algebraic-repair-calculus/experiments/: experiment_results.json  run_experiments.py
algebraic-repair-calculus/ideation/: approach_debate.md  approaches.md  crystallized_problem.md  depth_check.md  impl_eval_community_expert.md  impl_eval_engineer.md  impl_eval_pragmatist.md  impl_eval_skeptic.md  impl_gate_report.md  problem_slug.txt  seed_idea.md  theory_eval_community_expert.md  theory_eval_mathematician.md  theory_eval_skeptic.md  theory_gate_report.md  verification_signoff.md
algebraic-repair-calculus/implementation/: README.md
algebraic-repair-calculus/proposals/: problem_statement.md
algebraic-repair-calculus/real_benchmarks/: benchmark_results.json  run_real_benchmarks.py
algebraic-repair-calculus/theory/: approach.json  approach_backup.json  monograph.tex
algo-collusion-certifier/implementation/: Cargo.toml
bilevel-compiler-intersection-cuts/implementation/: Cargo.toml  experiments_output.txt
cascade-config-verifier/implementation/: Cargo.toml  _write_deps.py
causal-plasticity-atlas/implementation/: README.md  pyproject.toml
causal-qd-illumination/: API.md  README.md  pyproject.toml
causal-qd-illumination/benchmarks/: results.json  run_all.py
causal-qd-illumination/causal_qd/: __init__.py  types.py
causal-qd-illumination/causal_qd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
causal-qd-illumination/docs/: tool_paper.aux  tool_paper.out  tool_paper.tex
causal-qd-illumination/experiments/: run_experiments.py
causal-qd-illumination/ideation/: impl_eval_community_expert.md  impl_eval_engineer.md  impl_eval_pragmatist.md  impl_eval_skeptic.md  impl_gate_report.md  seed_idea.md  theory_eval_community_expert.md  theory_eval_mathematician.md  theory_eval_skeptic.md  theory_gate_report.md
causal-qd-illumination/tests/: conftest.py  test_analysis_modules.py  test_archive.py  test_baselines.py  test_certificates.py  test_ci_tests.py  test_cli.py  test_constrained_operators.py  test_convergence_analysis.py  test_dag.py  test_data.py  test_descriptors.py  test_edge_cases.py  test_engine.py  test_ges_baseline.py  test_integration.py  test_mec.py  test_metrics.py  test_nonlinear_scm.py  test_operators.py  test_parallel_tempering.py  test_performance.py  test_properties.py  test_scalability.py  test_scores.py  test_streaming.py  test_theorems.py
causal-qd-illumination/theory/: approach.json  monograph.tex
causal-robustness-radii/implementation/: README.md  pyproject.toml
causal-shielded-adaptive-trading/implementation/: API.md  README.md  grounding.json  pyproject.toml  tool_paper.aux  tool_paper.out  tool_paper.tex
certified-leakage-contracts/implementation/: Cargo.toml
choreo-xr-interaction-compiler/implementation/: Cargo.toml
coalg-cert-tlaplus-compress/implementation/: API.md  README.md  grounding.json  pyproject.toml  tool_paper.aux  tool_paper.out  tool_paper.tex  tool_paper_old.tex
coalgebraic-llm-behavioral-certifier/implementation/: Cargo.toml  README.md  analysis_completion.py  api.md  classifier_robustness_analysis.py  classifier_robustness_results.json  embedding_classifier_creative_permissive.json  embedding_classifier_instruction_rigid.json  embedding_classifier_safety_strict.json  expanded_experiments.py  expanded_results.json  grounding.json  pathb_deep_experiments.py  pathb_deep_experiments_v2.py  pathb_deep_raw_data.json  pathb_deep_results.json  pathb_experiments.py  pathb_improvements.py  pathb_improvements_results.json  pathb_results.json  phase0_experiments.py  phase_b_experiments.py  phase_b_results.json  phase_c_experiments.py  phase_c_results.json  scaled_experiments.py  tool_paper.aux  tool_paper.out  tool_paper.tex  tool_paper_backup.tex
csl-model-checking-on-tensor-train-cme/implementation/: API.md  README.md  grounding.json  pyproject.toml  tool_paper.aux  tool_paper.out  tool_paper.tex
dp-mechanism-forge/: API.md  README.md  pyproject.toml
dp-mechanism-forge/benchmarks/: results.json  run_all.py
dp-mechanism-forge/docs/: tool_paper.aux  tool_paper.out  tool_paper.tex  tool_paper.toc
dp-mechanism-forge/dp_forge/: __init__.py  analysis.py  baselines.py  certificates.py  cli.py  codegen.py  composition.py  config.py  discretization.py  dual_certificates.py  exceptions.py  exponential_mechanism.py  extractor.py  logging_config.py  numerical.py  optimizer.py  post_processing.py  privacy_accounting.py  query_sensitivity.py  sampling.py  sdp_builder.py  sensitivity_hull.py  symmetry.py  types.py  verifier.py  visualization.py  workloads.py
dp-mechanism-forge/dp_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dp-mechanism-forge/examples/: __init__.py  basic_counting.py  codegen_example.py  composition_example.py  histogram_synthesis.py  query_workload.csv  spec_counting.json  spec_custom_sum.json  spec_median.json  workload_optimization.py
dp-mechanism-forge/experiments/: run_benchmarks.py
dp-mechanism-forge/implementation/: API.md  README.md
dp-mechanism-forge/tests/: AMPLIFICATION_TESTS_SUMMARY.md  TEST_SUMMARY.md  VERIFICATION.md  __init__.py  test_abstract_interpretation.py  test_advanced_composition_module.py  test_amplified_cegis.py  test_autodiff_dual.py  test_autodiff_optimizer.py  test_autodiff_tape.py  test_baselines.py  test_cegar.py  test_cegar_abstraction.py  test_cegar_predicate.py  test_hdmm.py  (+76 more)
(+7895 files in other folders)
