[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-qd"
version = "0.1.0"
description = "Causal Quality-Diversity: MAP-Elites for Causal Discovery via Illumination of MEC Space"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CausalQD Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "scikit-learn>=1.2",
    "numba>=0.57",
    "python-igraph>=0.11",
    "matplotlib>=3.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.0",
    "hypothesis>=6.75",
    "mypy>=1.3",
    "ruff>=0.0.270",
]

[project.scripts]
causal-qd = "causal_qd.cli:main"

[tool.setuptools.packages.find]
include = ["causal_qd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100
