[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-forge"
version = "0.1.0"
description = "Counterexample-guided synthesis of provably optimal differentially private mechanisms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DP-Forge Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "cvxpy>=1.3",
    "matplotlib",
    "click",
    "rich",
    "sympy",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
]

[project.scripts]
dp-forge = "dp_forge.cli:main"

[tool.setuptools.packages.find]
include = ["dp_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "numerical: marks tests requiring numerical precision checks",
]

[tool.coverage.run]
source = ["dp_forge"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
