[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/market-sim",
    "crates/game-theory",
    "crates/collusion-core",
    "crates/stat-tests",
    "crates/counterfactual",
    "crates/certificate",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CollusionProof Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-bigint = "0.4"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
crossbeam = "0.8"
ordered-float = "4.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
bincode = "1.3"
prost = "0.12"
itertools = "0.12"
statrs = "0.16"
nalgebra = "0.32"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
