[workspace]
resolver = "2"
members = [
    "crates/cascade-types",
    "crates/cascade-graph",
    "crates/cascade-config",
    "crates/cascade-bmc",
    "crates/cascade-maxsat",
    "crates/cascade-repair",
    "crates/cascade-analysis",
    "crates/cascade-service",
    "crates/cascade-verify",
    "crates/cascade-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CascadeVerify Team"]
license = "MIT OR Apache-2.0"
description = "Static verification of retry-amplification cascades in microservice configurations"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
petgraph = "0.6"
indexmap = { version = "2.0", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
itertools = "0.12"
regex = "1.10"
once_cell = "1.19"
dashmap = "5.5"
rayon = "1.8"
crossbeam = "0.8"
num-rational = "0.4"
num-traits = "0.2"
ordered-float = { version = "4.2", features = ["serde"] }
bitvec = "1.0"
smallvec = "1.11"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.metadata.cascade-verify]
homepage = "https://github.com/cascade-verify/cascade-verify"
repository = "https://github.com/cascade-verify/cascade-verify"
