[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-plasticity-atlas"
version = "0.1.0"
description = "Causal-Plasticity Atlas: Mapping mechanism invariance, plasticity, and emergence across heterogeneous observational contexts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CPA Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "joblib>=1.3",
    "numba>=0.57",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-timeout>=2.1",
    "hypothesis>=6.80",
    "mypy>=1.4",
    "ruff>=0.1",
]
causal = [
    "causal-learn>=0.1.3",
    "lingam>=1.7",
]

[project.scripts]
cpa = "cpa.cli:main"

[tool.setuptools.packages.find]
include = ["cpa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
