[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causalcert"
version = "0.1.0"
description = "Causal Robustness Radii: certifying the stability of causal conclusions under structural perturbations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CausalCert Team"},
]
keywords = ["causal-inference", "robustness", "dag", "sensitivity-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=3.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "click>=8.1",
    "jinja2>=3.1",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "mip>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "mypy>=1.5",
    "ruff>=0.1",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.scripts]
causalcert = "causalcert.pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/causalcert/causalcert"
Documentation = "https://causalcert.readthedocs.io"

[tool.setuptools.packages.find]
include = ["causalcert*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
