[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/leak-types",
    "crates/leak-abstract",
    "crates/leak-analysis",
    "crates/leak-contract",
    "crates/leak-certify",
    "crates/leak-quantify",
    "crates/leak-transform",
    "crates/leak-smt",
    "crates/leak-eval",
    "crates/leak-cli",
]

[package]
name = "leakcert"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Certified Leakage Contracts Team"]
description = "Compositional quantitative bounds for speculative cache side channels in cryptographic binaries"
repository = "https://github.com/certified-leakage-contracts/leakcert"
readme = "../README.md"
keywords = ["side-channel", "cache", "leakage", "spectre", "cryptography"]
categories = ["development-tools", "science"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Certified Leakage Contracts Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
bitvec = "1.0"
num-traits = "0.2"
num-rational = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
parking_lot = "0.12"
goblin = "0.8"
csv = "1.3"
shared-types = { path = "crates/shared-types" }
leak-types = { path = "crates/leak-types" }
leak-abstract = { path = "crates/leak-abstract" }
leak-analysis = { path = "crates/leak-analysis" }
leak-contract = { path = "crates/leak-contract" }
leak-certify = { path = "crates/leak-certify" }
leak-quantify = { path = "crates/leak-quantify" }
leak-transform = { path = "crates/leak-transform" }
leak-smt = { path = "crates/leak-smt" }
leak-eval = { path = "crates/leak-eval" }

# Dependencies for examples and benchmarks at workspace root
[dependencies]
shared-types = { workspace = true }
leak-types = { workspace = true }
leak-abstract = { workspace = true }
leak-analysis = { workspace = true }
leak-contract = { workspace = true }
leak-certify = { workspace = true }
leak-quantify = { workspace = true }
leak-transform = { workspace = true }
leak-smt = { workspace = true }
leak-eval = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# ---------------------------------------------------------------------------
# Examples (runnable via `cargo run --example <name>`)
# ---------------------------------------------------------------------------

[[example]]
name = "aes_leakage_analysis"
path = "examples/aes_leakage_analysis.rs"

[[example]]
name = "regression_detection"
path = "examples/regression_detection.rs"

# ---------------------------------------------------------------------------
# Benchmarks (runnable via `cargo bench --bench core_benchmarks`)
# ---------------------------------------------------------------------------

[[bench]]
name = "core_benchmarks"
path = "benches/core_benchmarks.rs"
harness = false

[[bench]]
name = "cache_leakage_benchmarks"
path = "benches/cache_leakage_benchmarks.rs"
harness = false
