[workspace]
members = [
    "crates/choreo-types",
    "crates/choreo-dsl",
    "crates/choreo-spatial",
    "crates/choreo-ec",
    "crates/choreo-automata",
    "crates/choreo-cegar",
    "crates/choreo-codegen",
    "crates/choreo-gesture",
    "crates/choreo-conflict",
    "crates/choreo-cli",
    "crates/choreo-runtime",
    "crates/choreo-simulator",
    "crates/choreo-formats",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choreo-xr/choreo"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ordered-float = { version = "4.0", features = ["serde"] }
petgraph = "0.6"
smallvec = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
indexmap = { version = "2.0", features = ["serde"] }
nalgebra = "0.32"
bitflags = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
