[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coacert-tla"
version = "0.1.0"
description = "Coalgebraic certified compression for TLA+ specifications via F-coalgebra bisimulation with Merkle-hashed witnesses"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CoaCert-TLA Contributors"},
]
keywords = [
    "coalgebra",
    "bisimulation",
    "TLA+",
    "model-checking",
    "state-space-compression",
    "formal-verification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=3.0",
    "lark>=1.1",
]

[project.optional-dependencies]
z3 = ["z3-solver>=4.12"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
]
all = ["coacert-tla[z3,dev]"]

[project.scripts]
coacert = "coacert.cli:main"

[project.urls]
Homepage = "https://github.com/coacert/coacert-tla"
Documentation = "https://github.com/coacert/coacert-tla#readme"
Repository = "https://github.com/coacert/coacert-tla"
Issues = "https://github.com/coacert/coacert-tla/issues"

[tool.setuptools.packages.find]
include = ["coacert*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
