[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tn-check"
version = "0.1.0"
description = "CSL model checking on tensor-train compressed CME probability vectors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TN-Check Authors"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opt-einsum>=3.3",
    "click>=8.1",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "hypothesis>=6.75",
]

[project.scripts]
tn-check = "tn_check.cli:main"

[tool.setuptools.packages.find]
include = ["tn_check*"]
