[workspace]
resolver = "2"
members = [
    "crates/fpdiag-types",
    "crates/fpdiag-analysis",
    "crates/fpdiag-symbolic",
    "crates/fpdiag-diagnosis",
    "crates/fpdiag-repair",
    "crates/fpdiag-smt",
    "crates/fpdiag-transform",
    "crates/fpdiag-eval",
    "crates/fpdiag-report",
    "crates/fpdiag-cli",
    "crates/fpdiag-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Penumbra Contributors"]

[workspace.dependencies]
fpdiag-types = { path = "crates/fpdiag-types" }
fpdiag-analysis = { path = "crates/fpdiag-analysis" }
fpdiag-symbolic = { path = "crates/fpdiag-symbolic" }
fpdiag-diagnosis = { path = "crates/fpdiag-diagnosis" }
fpdiag-repair = { path = "crates/fpdiag-repair" }
fpdiag-smt = { path = "crates/fpdiag-smt" }
fpdiag-transform = { path = "crates/fpdiag-transform" }
fpdiag-eval = { path = "crates/fpdiag-eval" }
fpdiag-report = { path = "crates/fpdiag-report" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
petgraph = "0.6"
ordered-float = { version = "4.2", features = ["serde"] }
rand = "0.8"
num-traits = "0.2"
indexmap = { version = "2.1", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
bitflags = "2.4"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
num = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
