[workspace]
members = [
    "crates/types",
    "crates/pk-model",
    "crates/clinical",
    "crates/guideline-parser",
    "crates/abstract-interp",
    "crates/smt-encoder",
    "crates/model-checker",
    "crates/conflict-detect",
    "crates/recommendation",
    "crates/significance",
    "crates/evaluation",
    "crates/fhir-interop",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["GuardPharma Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ordered-float = { version = "4.2", features = ["serde"] }
petgraph = "0.6"
nalgebra = "0.32"
ndarray = "0.15"
rayon = "1.8"
indexmap = { version = "2.1", features = ["serde"] }
itertools = "0.12"
regex = "1.10"
csv = "1.3"
toml = "0.8"

# Internal crate dependencies
guardpharma-types = { path = "crates/types" }
guardpharma-pk-model = { path = "crates/pk-model" }
guardpharma-clinical = { path = "crates/clinical" }
guardpharma-guideline-parser = { path = "crates/guideline-parser" }
guardpharma-abstract-interp = { path = "crates/abstract-interp" }
guardpharma-smt-encoder = { path = "crates/smt-encoder" }
guardpharma-model-checker = { path = "crates/model-checker" }
guardpharma-conflict-detect = { path = "crates/conflict-detect" }
guardpharma-recommendation = { path = "crates/recommendation" }
guardpharma-significance = { path = "crates/significance" }
guardpharma-evaluation = { path = "crates/evaluation" }
guardpharma-fhir-interop = { path = "crates/fhir-interop" }
