[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taintflow"
version = "0.1.0"
description = "TaintFlow ML Pipeline Leakage Auditor – detect train/test information leakage via abstract interpretation over a partition-taint lattice."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TaintFlow Authors"},
]
keywords = ["machine-learning", "leakage", "data-science", "abstract-interpretation", "taint-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "rich>=13.0",
    "msgpack>=1.0",
    "dataclasses-json>=0.6",
]

[project.optional-dependencies]
sklearn = [
    "scikit-learn>=1.3",
]
pandas = [
    "pandas>=2.0",
]
torch = [
    "torch>=2.0",
]
formats = [
    "pyarrow>=12.0",
    "pandas>=2.0",
]
all = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "torch>=2.0",
    "pyarrow>=12.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
    "hypothesis>=6.80",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.scripts]
taintflow = "taintflow.cli.main:cli"

[project.urls]
Homepage = "https://github.com/taintflow/taintflow"
Documentation = "https://taintflow.readthedocs.io"
Repository = "https://github.com/taintflow/taintflow"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
taintflow = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
