[workspace]
members = [
    "crates/shared-types",
    "crates/mutation-core",
    "crates/program-analysis",
    "crates/smt-solver",
    "crates/contract-synth",
    "crates/coverage",
    "crates/test-gen",
    "crates/cli",
    "crates/gap-analysis",
    "crates/pit-integration",
    "crates/benchmarks-real",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MutSpec Team"]
description = "Mutation-guided contract synthesis via discrimination lattice walk"
repository = "https://github.com/mutspec/mutspec"
homepage = "https://github.com/mutspec/mutspec"
readme = "../../README.md"
keywords = ["mutation-testing", "contracts", "formal-verification", "smt", "program-analysis"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
indexmap = { version = "2.0", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
itertools = "0.12"
rayon = "1.8"
tempfile = "3.8"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
