[workspace]
resolver = "2"
members = [
    "crates/regsynth-types",
    "crates/regsynth-dsl",
    "crates/regsynth-temporal",
    "crates/regsynth-encoding",
    "crates/regsynth-solver",
    "crates/regsynth-pareto",
    "crates/regsynth-planner",
    "crates/regsynth-certificate",
    "crates/regsynth-formats",
    "crates/regsynth-cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
ordered-float = { version = "4.0", features = ["serde"] }
petgraph = "0.6"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
indexmap = { version = "2.0", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
itertools = "0.12"
rayon = "1.8"
criterion = { version = "0.5", features = ["html_reports"] }
