[workspace]
resolver = "2"
members = [
    "sonitype-core",
    "sonitype-dsl",
    "sonitype-psychoacoustic",
    "sonitype-optimizer",
    "sonitype-ir",
    "sonitype-codegen",
    "sonitype-renderer",
    "sonitype-stdlib",
    "sonitype-accessibility",
    "sonitype-streaming",
    "sonitype-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SoniType Contributors"]
license = "MIT OR Apache-2.0"
description = "A perceptual type system and optimizing compiler for information-preserving data sonification"

[workspace.dependencies]
sonitype-core = { path = "sonitype-core" }
sonitype-dsl = { path = "sonitype-dsl" }
sonitype-psychoacoustic = { path = "sonitype-psychoacoustic" }
sonitype-optimizer = { path = "sonitype-optimizer" }
sonitype-ir = { path = "sonitype-ir" }
sonitype-codegen = { path = "sonitype-codegen" }
sonitype-renderer = { path = "sonitype-renderer" }
sonitype-stdlib = { path = "sonitype-stdlib" }
sonitype-accessibility = { path = "sonitype-accessibility" }
sonitype-streaming = { path = "sonitype-streaming" }
sonitype-cli = { path = "sonitype-cli" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
ordered-float = { version = "4.2", features = ["serde"] }

# Audio output formats
hound = "3.5"
midly = { version = "0.5", features = ["alloc"] }

# Data input formats
csv = "1.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
