[workspace]
resolver = "2"
members = [
    "crates/negsyn-types",
    "crates/negsyn-slicer",
    "crates/negsyn-merge",
    "crates/negsyn-extract",
    "crates/negsyn-encode",
    "crates/negsyn-concrete",
    "crates/negsyn-proto-tls",
    "crates/negsyn-proto-ssh",
    "crates/negsyn-eval",
    "crates/negsyn-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["NegSynth Team"]

[workspace.dependencies]
negsyn-types = { path = "crates/negsyn-types" }
negsyn-slicer = { path = "crates/negsyn-slicer" }
negsyn-merge = { path = "crates/negsyn-merge" }
negsyn-extract = { path = "crates/negsyn-extract" }
negsyn-encode = { path = "crates/negsyn-encode" }
negsyn-concrete = { path = "crates/negsyn-concrete" }
negsyn-proto-tls = { path = "crates/negsyn-proto-tls" }
negsyn-proto-ssh = { path = "crates/negsyn-proto-ssh" }
negsyn-eval = { path = "crates/negsyn-eval" }
negsyn-cli = { path = "crates/negsyn-cli" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
bitvec = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
rustc-hash = "1.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
base64 = "0.21"
byteorder = "1.5"
bytes = "1.5"
nom = "7.1"
regex = "1.10"
tempfile = "3.8"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
