[workspace]
members = [
    "crates/safestep-types",
    "crates/safestep-solver",
    "crates/safestep-encoding",
    "crates/safestep-core",
    "crates/safestep-schema",
    "crates/safestep-k8s",
    "crates/safestep-diagnostics",
    "crates/safestep-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SafeStep Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
indexmap = { version = "2.0", features = ["serde"] }
petgraph = "0.6"
bitvec = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
hashbrown = { version = "0.14", features = ["serde"] }
ordered-float = { version = "4.1", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
itertools = "0.12"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
tokio = { version = "1.34", features = ["full"] }
kube = { version = "0.87", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
criterion = { version = "0.5", features = ["html_reports"] }
