[workspace]
members = [
    "conservation-types",
    "sim-types",
    "sim-laws",
    "conservation-analysis",
    "sim-monitor",
    "sim-analysis",
    "sim-detect",
    "sim-repair",
    "sim-integrator",
    "sim-trace",
    "sim-eval",
    "sim-cli",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ConservationLint Team"]
repository = "https://github.com/conservation-lint/conservation-lint"
description = "Automatic conservation-law auditing for physics simulations"
keywords = ["physics", "simulation", "conservation", "numerical-methods", "symplectic"]
categories = ["science", "simulation", "mathematics"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4.0", features = ["serde"] }
num-traits = "0.2"
num-complex = "0.4"
rand = "0.8"
rayon = "1.8"
petgraph = "0.6"
indexmap = { version = "2.0", features = ["serde"] }
nalgebra = "0.33"
ndarray = "0.16"
criterion = { version = "0.5", features = ["html_reports"] }
