[workspace]
members = ["spectacles-core", "spectacles-cli", "spectacles-integration", "spectacles-examples"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
num = "0.4"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ordered-float = { version = "4", features = ["serde"] }
petgraph = "0.6"
ndarray = "0.16"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
